Fixed responisive slides in regards to spacing of the h2 headers

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -14,7 +14,10 @@
 
     @media (max-width: 1300px) {
     flex-direction: column-reverse;
+    }
 
+    @media (max-width: 800px) {
+    padding: 40px 0;
     }
 }
 
@@ -44,6 +47,11 @@
     @media (max-width: 1300px) {
     width: 100%;
     padding: 0 0 50px 0;
+    }
+
+    @media (max-width: 1300px) {
+    width: 100%;
+    padding: 0 0 30px 0;
     }
 }
 
