--- a/styles/sass/partials/_bottomBanner.scss
+++ b/styles/sass/partials/_bottomBanner.scss
@@ -12,7 +12,7 @@
     }
 
     @media (max-width: 540px) {
-    min-height: 15vh;
+    min-height: 20vh;
     }
     
 
