--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -71,6 +71,11 @@
     width: 100%;
     padding: 0 0 50px 0;
     }
+
+    @media (max-width: 525px) {
+    width: 100%;
+    margin-top: 20px;
+    }
 }
 
 .codingType {
