--- a/styles/sass/partials/_skills.scss
+++ b/styles/sass/partials/_skills.scss
@@ -26,8 +26,7 @@
 
     h2 {
     text-align: center;
-    margin-top: 60px;
-    padding-bottom: 30px;
+    margin: 12px 0 10px 0;
     }
 
     @media (max-width: 525px) {
