--- a/styles/style.css
+++ b/styles/style.css
@@ -509,6 +509,12 @@ h1 {
   }
 }
 
+@media (max-width: 800px) {
+  .aboutContainer {
+    padding: 40px 0;
+  }
+}
+
 .aboutContent {
   width: 70%;
   padding-right: 40px;
@@ -542,6 +548,13 @@ h1 {
   .profilePic {
     width: 100%;
     padding: 0 0 50px 0;
+  }
+}
+
+@media (max-width: 1300px) {
+  .profilePic {
+    width: 100%;
+    padding: 0 0 30px 0;
   }
 }
 
@@ -597,8 +610,7 @@ h1 {
 
 .skills h2 {
   text-align: center;
-  margin-top: 60px;
-  padding-bottom: 30px;
+  margin: 12px 0 10px 0;
 }
 
 @media (max-width: 525px) {
@@ -759,6 +771,13 @@ h1 {
   }
 }
 
+@media (max-width: 525px) {
+  .projectDesc {
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+
 .codingType {
   font-size: 1.5rem;
   text-align: center;
@@ -813,7 +832,7 @@ h1 {
 
 @media (max-width: 540px) {
   .bottomBanner {
-    min-height: 15vh;
+    min-height: 20vh;
   }
 }
 
